# blackhole

./: .ci-pre-commit-config.yaml  README.md
blackhole/: .gitignore  Dockerfile  pyproject.toml
blackhole/.github/workflows/: ci-cd.yml
blackhole/common/: error_handler.py
blackhole/common/clients/: aws_client.py
blackhole/data_processor/: app.py
blackhole/data_processor/blueprints/: devops_texts_blueprint.py
blackhole/dataprocessor/: Dockerfile  app.py  handler.py
blackhole/dataprocessor/blueprints/: codebase_texts_blueprint.py  crawler_blueprint.py  devops_texts_blueprint.py  incident_texts_blueprint.py  infrastructure_texts_blueprint.py
blackhole/dataprocessor/classification/: classify.py
blackhole/dataprocessor/config/: development.py  production.py
blackhole/dataprocessor/migrations/versions/: 1_initial_migration.py
blackhole/dataprocessor/models/: crawler.py  project.py
blackhole/infrastructure/: main.tf  outputs.tf  variables.tf
blackhole/infrastructure/modules/blue_green/: main.tf  variables.tf
blackhole/models/: user.py
blackhole/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
blackhole/terraform/environments/classifier/: backend.tf  main.tf  outputs.tf  variables.tf
blackhole/terraform/environments/mock/: ec2.tf  rds.tf  variables.tf
blackhole/terraform/environments/prod/: backend.tf  bucket-policy.json  main.tf  outputs.tf  provider.tf  variables.tf
blackhole/terraform/environments/staging/: backend.tf  main.tf  outputs.tf  variables.tf
blackhole/trainer/: README  devops_classifier.py  sigmoid.py  validator.py  xgb_classifier.py
(+39 files in other folders)
