[tool.poetry]
name = "blackhole"
version = "0.1.0"
description = ""
authors = ["Rick Chen <rickchen19970829@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
boto3 = "^1.34.103"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
