[tool.poetry]
name = "blackhole"
version = "0.1.0"
description = ""
authors = ["Rick Chen <rickchen19970829@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-cors = "^4.0.1"
boto3 = "^1.34.103"
gunicorn = "^22.0.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
celery = "^5.4.0"
flask-restx = "^1.3.0"
sentry-sdk = "^2.2.1"
jax = "^0.4.30"
optax = "^0.2.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
